# robot-yujin

1. BPEL Adapters for ROCON/SOAP_Server/: adapter_util.py
1. BPEL Adapters for ROCON/bpel_adapter/: CMakeLists.txt  package.xml
1. BPEL Adapters for ROCON/bpel_adapter/launch/: concert.launch
1. BPEL Adapters for ROCON/bpel_adapter/scripts/: adapter_svc.py
1. BPEL Adapters for ROCON/bpel_adapter/services/adapter/: adapter.launch
2. Example using BPEL Adapters/MiniBP/bpelContent/: MiniBPProcess.bpel
2. Example using BPEL Adapters/OPAdapterClient/bpelContent/: OPAdapter.wsdl  OPAdapterClient.bpel  OPAdapterClient.bpelex  deploy.xml
2. Example using BPEL Adapters/SimpleMovingTurtlebot/bpelContent/: OPAdapter.wsdl  SimpleMovingTurtlebotArtifacts.wsdl
adapter_examples/MiniBP/: .project
adapter_examples/MiniBP/bpelContent/: MiniBPProcess.bpelex  MiniBPProcessArtifacts.wsdl  deploy.xml
adapter_examples/OPAdapterClient/: .project
adapter_examples/OPAdapterClient/bpelContent/: OPAdapterClientArtifacts.wsdl
adapter_examples/SimpleMovingTurtlebot/: .project
adapter_examples/SimpleMovingTurtlebot/bpelContent/: SimpleMovingTurtlebot.bpel  SimpleMovingTurtlebot.bpelex  deploy.xml
adapters/SOAP_Server/: server.py
adapters/bpel_adapter/services/adapter/: adapter.service
adapters/bpel_adapter/solution/: bpel_adapter.services
adapters/bpel_adapter_cafe/: CMakeLists.txt  package.xml
adapters/bpel_adapter_cafe/concert/: cafe_sim.concert
adapters/bpel_adapter_cafe/launch/: cafe_backend.launch
adapters/bpel_adapter_cafe/scripts/: adapter_svc.py  adapter_util.py
adapters/bpel_adapter_cafe/scripts/backup/: adapter_svc.py  adapter_util.py  server.py
adapters/bpel_adapter_cafe/services/adapter/: adapter.launch  adapter.parameters  adapter.service
adapters/bpel_adapter_cafe/solution/: bpel_adapter.services  concert.launch
