<?xml version="1.0"?>
<package>
  <name>bpel_adapter_cafe</name>
  <version>0.0.0</version>
  <description>The bpel_adapter_cafe package</description>

  <maintainer email="dykim@todo.todo">dykim</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/bpel_adapter_chatter</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>cafe_concert</run_depend>
  <export>
        <concert_service>services/adapter/adapter.service</concert_service>
  </export>
</package>
